styling and toolTip left

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,6 +6,13 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+		<section class="card">
+<!-- 			<h1>Doping in Professional Bicycle Racing</h1>
+			<h2>35 Fastest times up Alpe d`Huez</h2>
+			<p>Normalized to 13.8km distance</p> -->
+			<svg class="chart" width="800" height="600"></svg>
+		</section>
+		<div class="notes"></div>
     <div id="app"></div>
   </body>
 </html>
