--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,34 +5,66 @@
 	box-sizing: border-box;
 }
 
-body {
-	padding: 40px;
+html, body {
+	background: rgba(181,255,183,1);
+	background: -moz-linear-gradient(45deg, rgba(181,255,183,1) 0%, rgba(17,222,48,1) 100%);
+	background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(181,255,183,1)), color-stop(100%, rgba(17,222,48,1)));
+	background: -webkit-linear-gradient(45deg, rgba(181,255,183,1) 0%, rgba(17,222,48,1) 100%);
+	background: -o-linear-gradient(45deg, rgba(181,255,183,1) 0%, rgba(17,222,48,1) 100%);
+	background: -ms-linear-gradient(45deg, rgba(181,255,183,1) 0%, rgba(17,222,48,1) 100%);
+	background: linear-gradient(45deg, rgba(181,255,183,1) 0%, rgba(17,222,48,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5ffb7', endColorstr='#11de30', GradientType=1 );
+	background-repeat: no-repeat;
+  background-attachment: fixed;
+	height: 100%;
+	font-family: Helvetica, sans-serif;
 }
+
+body {padding: 40px;}
 
 .card {
 	text-align: center;
-	background-color: grey;
 	width: 800px;
-	height: 600px;
 	margin: 0 auto;
-	/*padding-top: 10px;*/
-}
-
-.chart {
-	/*border: 1px solid red;*/
+	padding-top: 20px;
+	background-color: white;
+  border-radius: 10px;
+  opacity: 0.90;
 }
 
 .toolTip {
   position: absolute;
-  text-align: left;
+  text-align: center;
   width: auto;
   height: auto;
   padding: 3px 5px 3px 5px;
-  font: 1em sans-serif;
-  border: 0px;
+  font-size: 16px;
   border-radius: 5px;
   pointer-events: none;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
-  background-color: lightsteelblue;
+  background-color: lightgreen;
   opacity: 0;
 }
+
+.tip-note {
+	max-width: 200px; 
+	margin: 15px auto 0 auto;
+}
+.axis {font-size: 12px;}
+
+.notes {
+	width: 800px;
+	margin: 20px auto 20px auto;
+	padding: 20px;
+	background-color: white;
+  border-radius: 10px;
+  opacity: 0.90;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+}
+
+.notes a {
+	display: inline-block;
+}
+
